--- a/numpy.ipynb
+++ b/numpy.ipynb
@@ -2223,32 +2223,114 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 77,
    "id": "1874520a-7ed5-458a-a979-a8fa3481f48f",
    "metadata": {},
    "outputs": [],
    "source": [
-    "arr3"
+    "pizza1=np.random.randint(10,20,5)\n",
+    "pizza2=np.random.randint(1,20,size=(2,3))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 78,
+   "id": "f86c575c-a1ea-44b3-887c-17454357117f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[10 14 10 13 18]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(pizza1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "id": "97bca31c-f3b8-4a10-9dce-0dbe37c373b3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[14 19  1]\n",
+      " [12  4  6]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(pizza2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 81,
    "id": "76c89ad9-6531-4bd5-ab7d-11674d1a13fe",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[14 10]\n"
+     ]
+    }
+   ],
    "source": [
-    "arr3[1:3] #print 2,3"
+    "print(pizza1[1:3])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "a214be3d-0632-4722-9788-b62d0fff3ab6",
+   "execution_count": 122,
+   "id": "016a261e-5170-40d8-a854-b5d91e27b024",
    "metadata": {},
    "outputs": [],
    "source": [
-    "arr3[1:] #print 2,3,4,6"
+    "orders=np.array(['cheese','veg','spicy','bbq'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 124,
+   "id": "9c78ddf3-f958-4444-8420-129d80304815",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['cheese' 'veg' 'spicy' 'bbq']\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(orders)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 126,
+   "id": "7a3759c8-40a5-4f95-afdf-f238fe3ab945",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['veg' 'spicy']\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(orders[1:3])"
    ]
   },
   {
@@ -2261,62 +2343,368 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 158,
    "id": "0079e324-9c6a-400e-8769-e0c9c523e23f",
    "metadata": {},
    "outputs": [],
    "source": [
-    "arr6=np.random.randint(5,10,size=(3,3))"
+    "pizza2=np.array([[1,2,3],\n",
+    "          [4,5,6],\n",
+    "          [7,8,9]])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 159,
    "id": "45af8023-1d71-44f2-99d2-fff799b474f4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1 2 3]\n",
+      " [4 5 6]\n",
+      " [7 8 9]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(pizza2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 170,
+   "id": "e9d94c68-cdde-4df8-ae48-9307d402d1a8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2 5 8]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(pizza2[:,1]) #row all #column 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 172,
+   "id": "ba0134f9-a7ea-4ee2-91a9-70df1dfae255",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[4 5 6]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(pizza2[1,:]) #row 0 column all"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 173,
+   "id": "0c3d6fd2-5b55-4576-9f05-8e7fc77c6a28",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1]\n",
+      " [4]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(pizza2 [0:2,0:1]) #first two row and first column\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 161,
+   "id": "6490dfbc-6ecc-4587-87c1-9548d3411c03",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[4 5 6]\n",
+      " [7 8 9]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(pizza2 [1:])  # row2 to all"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 162,
+   "id": "a9f38728-09d8-4472-9415-8edf6a0c64a0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1 2 3]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(pizza2 [:1])  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 168,
+   "id": "dbdcae40-6fdf-4fa7-a4e8-31b9f41b8078",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[7 8 9]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(pizza2 [2:]) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 177,
+   "id": "76b1ee57-af7f-4868-895b-e92e029cee7e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1 2 3]\n",
+      " [4 5 6]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(pizza2 [:2]) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 174,
+   "id": "34e61cd9-e2ba-48d4-9d89-e8f2eed74026",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[5 6]\n",
+      " [8 9]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(pizza2 [1:,1:])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 182,
+   "id": "c1b19372-25ad-482a-ab19-e34738f6a43b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[2 3]\n",
+      " [5 6]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(pizza2 [:2,1:])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 183,
+   "id": "747107c3-2756-48d7-9c3e-d7492163f21d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1]\n",
+      " [4]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(pizza2 [:2,:1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 184,
+   "id": "8387d346-5ac4-4242-a445-b56655661867",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[2 3]\n",
+      " [5 6]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(pizza2 [:2,1:3])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 164,
+   "id": "c1ed93d7-a791-4d88-819e-e24640894a13",
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(arr6)"
+    "orders2=np.array([['cheese','veg'],['spicy','bbq']])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 165,
+   "id": "e0642aab-0682-45f3-9574-fe7ac22fc549",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[['cheese' 'veg']\n",
+      " ['spicy' 'bbq']]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(orders2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 166,
+   "id": "fe663e6c-3f78-4f40-bca9-ef6f701260cf",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "veg\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(orders2[0,1]) # Row 0 , Column 1"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1e862b75-f183-4968-820d-73487526e1a5",
+   "metadata": {},
+   "source": [
+    "### 3D array"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 137,
    "id": "d0237883-70d0-419e-8695-84fd13159638",
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(arr6[0:2])"
+    "pizza3=np.array([[[1,2,3],\n",
+    "          [4,5,6],\n",
+    "          [7,8,9]]])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "0c3d6fd2-5b55-4576-9f05-8e7fc77c6a28",
+   "execution_count": 138,
+   "id": "015970a3-70b6-422a-b34e-04ba01e809d0",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[[1, 2, 3],\n",
+       "        [4, 5, 6],\n",
+       "        [7, 8, 9]]])"
+      ]
+     },
+     "execution_count": 138,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "print(arr6 [0:2,0:2]) #first two row and column\n"
+    "pizza3"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "6490dfbc-6ecc-4587-87c1-9548d3411c03",
+   "execution_count": 139,
+   "id": "2e4c583d-435a-46d7-b4c7-c6f0d1ec1faf",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3"
+      ]
+     },
+     "execution_count": 139,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "print(arr6 [1:])"
+    "pizza3.ndim"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "34e61cd9-e2ba-48d4-9d89-e8f2eed74026",
+   "execution_count": 144,
+   "id": "24d66aad-ae40-4bd2-972a-8bf3d284bc20",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "6\n"
+     ]
+    }
+   ],
    "source": [
-    "print(arr6 [1:,1:])"
+    "print(pizza3[0,1,2]) #index,row,column"
    ]
   },
   {
@@ -3199,12 +3587,100 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "32489fd3-ef50-4d05-a257-316726a36959",
+   "metadata": {},
+   "source": [
+    "# argmax,argmin"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 194,
+   "id": "6709024f-e1b9-42d8-b3a5-559b0fb80265",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "num=np.array([10,20,30,40,50])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 195,
+   "id": "cfe8f374-ee57-4a86-9c9d-428259a9e249",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(np.argmax(num)) #index"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1bd55cc4-2277-48b3-81ef-d02a9ad55feb",
+   "id": "b2b885a2-619f-420d-92ae-33ac14f4daa0",
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2f3b0cd3-c9ac-4b42-b52b-6b6b3e47c148",
+   "metadata": {},
+   "source": [
+    "### max"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 197,
+   "id": "2e936086-382e-4e15-9188-8ea132b1ca43",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "50\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(np.max(num)) #index"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "95e6291c-6449-489b-a677-6223e324c386",
+   "metadata": {},
+   "source": [
+    "### min"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 193,
+   "id": "ceb63a04-b822-4c04-b89b-039eac072b12",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(np.min(num)) #index"
+   ]
   }
  ],
  "metadata": {
