--- a/numpy.ipynb
+++ b/numpy.ipynb
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "id": "9b17512d-7d2d-4ed9-a189-a65e1159e331",
    "metadata": {},
    "outputs": [],
@@ -838,6 +838,27 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "6422ccba-507d-4ae9-9477-0b3d68081446",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([10., 10., 10., 10., 10.])"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.full (5,10.0) #iteration, value"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "93a47db7-b458-4514-a981-81e734dca910",
    "metadata": {},
@@ -946,6 +967,49 @@
    ],
    "source": [
     "np.identity(5) #takes only one parameter"
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "id": "4f6fab3b-de87-4563-92cb-57b12537b2ec",
+   "metadata": {},
+   "source": [
+    "With Different Value"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "ba71ccee-1dbd-4d42-9c53-a8d46d90afc6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "identity_matrix=5*np.identity(5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "8a0ad968-d3ec-469a-a69b-4af98abcffaa",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[5., 0., 0., 0., 0.],\n",
+       "       [0., 5., 0., 0., 0.],\n",
+       "       [0., 0., 5., 0., 0.],\n",
+       "       [0., 0., 0., 5., 0.],\n",
+       "       [0., 0., 0., 0., 5.]])"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "identity_matrix"
    ]
   },
   {
@@ -1373,6 +1437,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "1abcc332-4542-47d8-b659-f410ee59a397",
+   "metadata": {},
+   "source": [
+    "### 3D"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 44,
    "id": "355ac203-8177-487f-8f8d-1c3e14d2d379",
@@ -1408,6 +1480,48 @@
    ],
    "source": [
     "arr3"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "648819f0-539c-46c2-aff6-bc049e75f903",
+   "metadata": {},
+   "source": [
+    "### 2D"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "9f2e3920-b3c7-4500-91f1-a801bb895dc5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "random_numbers = np.random.rand(7, 5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "dc99efaa-c27c-407d-a19d-61629b774eeb",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0.18141748 0.23802723 0.9274227  0.55284483 0.62608475]\n",
+      " [0.06693156 0.19282968 0.86207788 0.45094844 0.43946198]\n",
+      " [0.29485815 0.72566119 0.75771856 0.73876317 0.42683936]\n",
+      " [0.99647288 0.27094279 0.95675007 0.12350759 0.83035609]\n",
+      " [0.95259387 0.02795366 0.46042177 0.92740611 0.86624285]\n",
+      " [0.29945158 0.92277277 0.64709348 0.17358859 0.97023922]\n",
+      " [0.11569297 0.22237629 0.89890862 0.45628655 0.99395078]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(random_numbers)"
    ]
   },
   {
@@ -3596,17 +3710,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 194,
+   "execution_count": 199,
    "id": "6709024f-e1b9-42d8-b3a5-559b0fb80265",
    "metadata": {},
    "outputs": [],
    "source": [
-    "num=np.array([10,20,30,40,50])"
+    "num=np.array([40,20,10,30,50])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 195,
+   "execution_count": 200,
    "id": "cfe8f374-ee57-4a86-9c9d-428259a9e249",
    "metadata": {},
    "outputs": [
@@ -3624,11 +3738,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 201,
    "id": "b2b885a2-619f-420d-92ae-33ac14f4daa0",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(np.argmin(num)) #index"
+   ]
   },
   {
    "cell_type": "markdown",
