--- a/numpy.ipynb
+++ b/numpy.ipynb
@@ -1018,16 +1018,7 @@
    "metadata": {},
    "source": [
     "# eye\n",
-    "The numpy.eye() function in Python's NumPy library is used to create a 2-dimensional array (matrix) with ones on a specified diagonal and zeros elsewhere. This function is commonly used to generate identity matrices, which are square matrices with ones only on the main diagonal and zeros in all other positions. \n",
-    "Key parameters of numpy.eye():\n",
-    "N: The number of rows in the output array.\n",
-    "M (optional): The number of columns in the output array. If None, it defaults to N, resulting in a square matrix.\n",
-    "k (optional): The index of the diagonal.\n",
-    "k=0 (default) refers to the main diagonal.\n",
-    "Positive values of k refer to upper diagonals (above the main diagonal).\n",
-    "Negative values of k refer to lower diagonals (below the main diagonal).\n",
-    "dtype (optional): The data type of the returned array (e.g., int, float).\n",
-    "order (optional): Specifies the memory layout of the array, either 'C' (row-major) or 'F' (column-major)."
+    "The numpy.eye() function in Python's NumPy library is used to create a 2-dimensional array (matrix) with ones on a specified diagonal and zeros elsewhere. This function is commonly used to generate identity matrices, which are square matrices with ones only on the main diagonal and zeros in all other positions. \n"
    ]
   },
   {
@@ -1625,6 +1616,99 @@
    ],
    "source": [
     "rans"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "06580a16-7205-4837-8e7d-6ec700eb0ad6",
+   "metadata": {},
+   "source": [
+    "### Random Fix or Reusbale Value "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 226,
+   "id": "16f5f724-02d0-467d-9fb7-b75c37f5302e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[52, 93, 15, 72, 61],\n",
+       "       [21, 83, 87, 75, 75]], dtype=int32)"
+      ]
+     },
+     "execution_count": 226,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.random.seed(42)\n",
+    "np.random.randint(1,100,(2,5))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c9f757a5-34f0-4fb8-bf57-730398524f9f",
+   "metadata": {},
+   "source": [
+    "### uniform Distrubtion"
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "id": "ef50b7d8-52c6-4b5d-a382-7641da11a810",
+   "metadata": {},
+   "source": [
+    "Uniformly distributed integers in a given range"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 228,
+   "id": "00d51372-0f7a-4fd5-8008-1331b64cca21",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0.60111501, 0.70807258, 0.02058449, 0.96990985, 0.83244264])"
+      ]
+     },
+     "execution_count": 228,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.random.rand(5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 229,
+   "id": "2e7fd611-9471-4b48-be58-796cf24c606a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0.21233911, 0.18182497, 0.18340451, 0.30424224, 0.52475643],\n",
+       "       [0.43194502, 0.29122914, 0.61185289, 0.13949386, 0.29214465],\n",
+       "       [0.36636184, 0.45606998, 0.78517596, 0.19967378, 0.51423444],\n",
+       "       [0.59241457, 0.04645041, 0.60754485, 0.17052412, 0.06505159],\n",
+       "       [0.94888554, 0.96563203, 0.80839735, 0.30461377, 0.09767211]])"
+      ]
+     },
+     "execution_count": 229,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.random.rand(5,5)"
    ]
   },
   {
